# browser-eng

./: .gitignore  README.md  browser.py  constants.py  font_cache.py  layout.py  parser.py  pyproject.toml  requirements.txt  test_browser.py  test_layout.py  test_url.py  test_utils.py  typedclasses.py  url.py
.github/workflows/: test.yml
src/: block_layout.py  browser.css  browser.py  chrome.py  constants.py  css_parser.py  document_layout.py  draw.py  font_cache.py  helpers.py  input_layout.py  line_layout.py  parser.py  tab.py  test_utils.py  typedclasses.py  url.py
tests/: test_browser.py  test_css_parser.py  test_html_parser.py  test_layout.py  test_parser.py  test_url.py
